fix: left-align case study logos with card text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -907,6 +907,7 @@ section {
 }
 
 .case-study-logo {
+  align-self: flex-start;
   height: 200px;
   width: 200px;
   max-width: 100%;
